[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/characters/enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://game/characters/Animations.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/overlap/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="SphereShape" id=1]
radius = 0.543

[sub_resource type="CapsuleShape" id=2]
radius = 0.399364
height = 0.295251

[node name="Enemy" type="Spatial"]
script = ExtResource( 1 )

[node name="Animations" parent="." instance=ExtResource( 2 )]

[node name="HandSlotLeft" parent="Animations/Skeleton" index="5"]
transform = Transform( -1, 2.92556e-08, 0, 0, 1.04171e-07, 1, -1.04757e-07, 1, -7.80337e-08, 0.4, 0.205887, -1.3956e-07 )

[node name="HandSlotRight" parent="Animations/Skeleton" index="6"]
transform = Transform( -1, 1.0808e-07, 0, 0, -1.76167e-07, 1, 3.87132e-10, 1, 2.23518e-07, -0.4, 0.205887, 1.2314e-07 )

[node name="PhysicalBoneArmLeft" parent="Animations/Skeleton" index="8"]
transform = Transform( -1.19209e-07, -0.881633, -0.471936, 2.5332e-07, -0.471936, 0.881633, -1, -1.19208e-07, 2.53318e-07, 0.27, 0.448743, -6.97797e-08 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.47704e-13, 8.20938e-09, 0.275461 )
body_offset = Transform( 1, -8.3844e-13, 1.67688e-12, 0, -2.98023e-08, -1, -3.55271e-15, 1, -2.98023e-08, -1.42109e-14, 0.275461, 0 )

[node name="PhysicalBoneArmRight" parent="Animations/Skeleton" index="9"]
transform = Transform( -1.19209e-07, -0.881633, 0.471936, -2.23518e-07, 0.471936, 0.881633, -1, -1.19209e-07, -2.23517e-07, -0.27, 0.448743, 6.15694e-08 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.81597e-13, 2.15929e-08, 0.275461 )
body_offset = Transform( 1, -3.90799e-13, 0, 0, 2.98023e-08, -1, -8.32667e-17, 1, 2.98023e-08, 7.81597e-13, 0.275461, -2.98023e-08 )

[node name="PhysicalBoneHandSlotLeft" parent="Animations/Skeleton" index="11"]
transform = Transform( -1, 2.92556e-08, 4.48776e-21, 2.83327e-20, 1.04171e-07, 1, -1.04756e-07, 1, -7.80334e-08, 0.4, 0.205887, -1.3956e-07 )
body_offset = Transform( 1, 0, 4.65868e-21, 3.12639e-13, 1, 3.12639e-13, -4.23516e-21, 3.12639e-13, 1, 0, 0, 0 )

[node name="PhysicalBoneHandSlotRight" parent="Animations/Skeleton" index="12"]
transform = Transform( -1, 1.08079e-07, -7.45389e-20, -1.00028e-23, -1.76167e-07, 1, 3.87133e-10, 1, 2.23518e-07, -0.4, 0.205887, 1.2314e-07 )
body_offset = Transform( 1, 3.12639e-13, 7.45389e-20, 1.22125e-15, 1, 0, 2.05141e-22, 0, 1, 0, 0, 0 )

[node name="HeadHurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 32

[node name="CollisionShape" parent="HeadHurtbox" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.29124, 0 )
shape = SubResource( 1 )

[node name="BodyHurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 32

[node name="CollisionShape" parent="BodyHurtbox" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.386644, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="take_damage" from="HeadHurtbox" to="." method="_on_HeadHurtbox_take_damage"]
[connection signal="take_damage" from="BodyHurtbox" to="." method="_on_BodyHurtbox_take_damage"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]

[editable path="Animations"]
[editable path="HeadHurtbox"]
[editable path="BodyHurtbox"]
